--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Sueun Jang
 
 # Short bio or description (displayed in the header)
-description: I research to design the future.
+description: jchris119@gmail.com
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
