--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Sueun Jang
 description: jchris119@gmail.com
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: http://sueannej.github.io/images/me.jpeg
 
 #
 # Flags below are optional
